fixed overflow

--- a/apps/static/styles.css
+++ b/apps/static/styles.css
@@ -25,7 +25,6 @@ li {
 .nav-pills .btn {
     width: 100%;
     white-space: nowrap;
-    overflow: hidden;
     text-overflow: ellipsis;
 }
 
